fix: spacing for reply count

--- a/src/v2/styles/MessageList/MessageList-theme.scss
+++ b/src/v2/styles/MessageList/MessageList-theme.scss
@@ -93,6 +93,7 @@
       color: var(--str-chat__thread-head-start-color);
       font-size: 1rem;
       line-height: 1.25rem;
+      padding-top: var(--str-chat__spacing-3);
     }
   }
 }
